--- a/Agenda/app/src/main/AndroidManifest.xml
+++ b/Agenda/app/src/main/AndroidManifest.xml
@@ -13,12 +13,23 @@
         android:theme="@style/Theme.Agenda"
         tools:targetApi="19">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activity.FormularioAlunoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.ListaAlunosActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
