05. Finalizando o fluxo do App
Aplicar comportamentos nas views com listeners;
Aplicar técnica de persistência de dados a partir do padrão DAO;
Utilizar adequadamente os estados do ciclo de vida de uma Activity;
Refatorar o código das Activities.

--- a/Agenda/app/src/main/AndroidManifest.xml
+++ b/Agenda/app/src/main/AndroidManifest.xml
@@ -13,15 +13,6 @@
         android:theme="@style/Theme.Agenda"
         tools:targetApi="19">
         <activity
-            android:name=".ui.activity.FormularioAlunoActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".ui.activity.ListaAlunosActivity"
             android:exported="true">
             <intent-filter>
@@ -30,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.FormularioAlunoActivity" />
     </application>
 
 </manifest>
